# idos-access-grants

./: LICENSE  README.md
.github/workflows/: test.yml
evm/: .env  .gitignore  README.md  hardhat.config.js  package.json  pnpm-lock.yaml
evm/.openzeppelin/: arbitrum-one.json  sepolia.json  unknown-128123.json  unknown-42793.json
evm/artifacts/contracts/AccessGrants.sol/: AccessGrants.json
evm/contracts/: AccessGrants.sol  AccessGrantsV1.sol  AccessGrantsV2.sol
evm/scripts/: deploy-with-proxy.js  deploy.js  upgrade-with-proxy.js
evm/test/: AccessGrants-2.js  AccessGrants.js
near/: README.md
near-rs/: .gitignore  README.md  package.json
near-rs/contract/: Cargo.toml  deploy.sh
near-rs/contract/src/: lib.rs
near-rs/integration-tests/: Cargo.toml  empty.rs
near-rs/integration-tests/src/: tests.rs
near-rs/integration-tests/tests/: delete_grant_by_signature.rs  everything.rs  insert_grant_by_signature.rs  tests.rs
near-rs/integration-tests/tests/assert/: mod.rs
near-rs/integration-tests/tests/events/: mod.rs
near-rs/integration-tests/tests/helpers/: mod.rs
near-rs/integration-tests/tests/nep413/: mod.rs
near-ts/: .gitignore  .gitpod.yml  Dockerfile  README.md  package-lock.json  package.json
near-ts/contract/: .gitignore  build.sh  deploy.sh  package-lock.json  package.json
near-ts/contract/src/: contract.ts  public_key.ts
near-ts/integration-tests/: package-lock.json
near-ts/integration-tests/src/: main.ava.ts
near/contract/src/: lib.rs
near/integration-tests/src/: tests.rs
(+2 files in other folders)
