[package]
name = "access_grants"
version = "1.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "5.0.0"
# I don't know why I need to declare a direct dep to borsh, but that's what it took to compile.
borsh = "*"
hex = "0.4.3"

[dev-dependencies]
near-sdk = { version = "5.0.0", features = ["unit-testing"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []
